[package]
name = "notnow"
version = "0.3.10"
edition = "2021"
rust-version = "1.81"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/notnow"
repository = "https://github.com/d-e-s-o/notnow.git"
readme = "README.md"
categories = [
  "command-line-utilities",
  "encoding",
  "filesystem",
  "database-implementations",
  "text-processing",
]
keywords = [
  "icalendar",
  "ics",
  "planner",
  "todo",
  "tui",
]
description = """
A terminal based task and TODO management software.
"""
include = ["build.rs", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[profile.release]
opt-level = "z"
debug = true
lto = true
codegen-units = 1
incremental = false

[features]
default = []
coredump = ["dep:coredump"]
# Enable code paths requiring a nightly toolchain. This feature is only
# meant to be used for testing and benchmarking purposes.
nightly = []
readline = ["dep:rline"]
test = []

[[example]]
name = "with-test-data"
path = "examples/with-test-data.rs"
required-features = ["test"]

[[test]]
name = "test"
path = "tests/test.rs"
required-features = ["test"]

[build-dependencies]
anyhow = "1.0.66"
grev = "0.1.3"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.async-trait]
version = "0.1.41"

[dependencies.clap]
version = "4.1"
default-features = false
features = ["derive", "help", "std", "suggestions", "usage"]

[dependencies.coredump]
version = "0.1.1"
optional = true

[dependencies.dirs]
version = "6.0"

[dependencies.gui]
version = "0.6.3"
features = ["derive"]

[dependencies.icalendar]
version = "0.16.5"
default-features = false
features = ["parser"]

[dependencies.libc]
version = "0.2"

[dependencies.rbuf]
version = "0.1.3"

[dependencies.rline]
version = "0.3.2"
optional = true

[dependencies.serde]
version = "1.0.103"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.termion]
version = "4.0"

[dependencies.tokio]
version = "1.8"
default-features = false
features = ["fs", "io-util", "macros", "rt"]

[dependencies.unicode-segmentation]
version = "1.10"

[dependencies.unicode-width]
version = "0.2.0"

[dependencies.uuid]
version = "1.2"
default-features = false
features = ["serde", "v4"]

[dev-dependencies.gaps]
version = "0.3.1"

[dev-dependencies.tempfile]
version = "3.3"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
